# mofa-fm

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AI_SCRIPT_IMPLEMENTATION_SUMMARY.md  CLAUDE.MD  COMPATIBILITY_REPORT.md  DEV_GUIDE.md  DOCKER_DEPLOYMENT_SUMMARY.md  DOCKER_GUIDE.md  Dockerfile  FRONTEND_AI_USAGE_GUIDE.md  MOFA_FLOW_MIGRATION.md  README.md  UI_INTERACTION_REFACTOR.md  WEBVIEW_TASKS.md  architecture.md  build-docker.sh  dev-logs.sh  dev-restart-celery.sh  dev-start.sh  dev-status.sh  dev-stop.sh  how.md  package.sh  start.sh  study1.md  test_debate.py  verification_guide.md  why.md
backend/: .env.example  AI_SCRIPT_USAGE.md  celerybeat-schedule.db  requirements.txt  run.py  seed_data.py  test_podcast_generation.md
backend/app/: __init__.py  main.py
backend/config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
backend/requirements/: base.txt  dev.txt  prod.txt
backend/utils/: audio_processor.py  math_captcha.py
deploy/: setup.sh
deploy/nginx/: mofa-fm-beta-1234.conf  mofa-fm-simple.conf
deploy/scripts/: mofa-db-backup.sh  mofa-deploy-test.sh
deploy/systemd/: mofa-fm-celery.service  mofa-fm-django.service  mofa-fm-test-celery-beat.service  mofa-fm-test-celery-worker.service  mofa-fm-test-gunicorn.service
docs/: design.md
examples/chatbot-alicloud-0908/: CODE_CHANGES.md  ENV_SETUP.md  README.md  USAGE.md  (+7 more)
frontend/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.js  vitest.config.js
node-hub/dora-conference-controller/: Cargo.toml
node-hub/dora-conference-controller/src/: main.rs
(+311 files in other folders)
